fix color contrast for better a11y

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ li {
   color: #333;
 }
 a {
-  color: orange;
+  /* color: orange; */
   text-decoration: none;
 }
 a:hover,
@@ -37,6 +37,7 @@ a:focus {
 a img {
   border: none 0px #fff;
 }
+
 h1,
 h2,
 h3,
@@ -67,12 +68,21 @@ section {
 }
 #footer {
   background-color: #444;
-  color: #aaa;
-  font-size: 8pt;
+  color: #c5c5c5;
+  font-size: 0.9em;
   letter-spacing: 2px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+}
+
+#footer strong {
+  font-size: 1.1em;
+  color: #ffa338;
+  font-weight: normal;
+}
+#footer a strong:hover {
+  color: #3397db;
 }
 /* ====================== Navigation ====================== */
 .home-header {
@@ -87,7 +97,7 @@ nav {
   grid-column: 1;
   width: 100%;
   height: 80px;
-  background-color: #252831;
+  background-color: #252830;
   text-align: center;
 }
 
@@ -132,7 +142,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #0275d8;
+  color: #056cc5;
   text-decoration: none;
 }
 
@@ -147,14 +157,19 @@ nav h1 a {
   width: 100%;
   background-color: #ccc;
 }
+
 .leaflet-top.leaflet-left {
   top: 300px;
+}
+.leaflet-container a {
+  background: white;
+  color: #0680b0;
 }
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  background-color: #3397db;
+  background-color: #034f82;
   text-align: center;
 }
 .filter-options h2 {
@@ -163,6 +178,7 @@ nav h1 a {
   font-weight: normal;
   margin: 0 20px;
   padding-top: 5px;
+  letter-spacing: 2px;
 }
 .filter-options select {
   background-color: white;
@@ -209,7 +225,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #925104;
   font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -223,11 +239,11 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #925104;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 1.2em;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -256,7 +272,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #bb7104;
   font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -302,7 +318,7 @@ nav h1 a {
 
 #reviews-container h2 {
   text-align: center;
-  color: #f58500;
+  color: #bb7104;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
